# MEng_Project_Smit

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CONFIGURATION_GUIDE.md  GAIA dataset - val.xlsx  README.md  config_academic.yaml  config_creative.yaml  config_fast_test.yaml  config_loader.py  config_research.yaml  evaluate_gaia_baseline.py  evaluate_plangen_gaia_bestofn_challenger_prompt.py  evaluate_plangen_gaia_bestofn_challenger_prompt_10to55.py  evaluate_plangen_gaia_rebase_prompt_decorator.py  evaluate_plangen_gaia_results.py  evaluate_plangen_gaia_results_best_of_n.py  evaluate_plangen_gaia_results_mixture.py  evaluate_plangen_gaia_results_rebase.py  evaluate_plangen_gaia_results_rebase_debug.py  evaluate_plangen_gaia_results_tree.py  example_configurations.py  extract_baseline_data.py  gaia_baseline_llama3_8b.py  pdf_reader.py  plangen_bedrock_result.json  plangen_config.yaml  plangen_gaia.py  plangen_gaia_BestofN_New_prompt_challenger_run1_config.py  plangen_gaia_best_of_n_results.json  plangen_gaia_mixture_results.csv  plangen_gaia_mixture_results.json  plangen_gaia_rebase_prompt_decorator.json  plangen_gaia_rebase_results.csv  plangen_gaia_rebase_results.json  plangen_gaia_results_agents_without_algorithm.json  plangen_gaia_results_new.csv  plangen_gaia_results_new.xlsx  plangen_gaia_results_with_challenger_prompt_decorder.xlsx  (+11 more)
.github/: dependabot.yml
.hidden/: CLAUDE.md
docs/: DOCUMENTATION_PROGRESS.md  DOCUMENTATION_STRUCTURE.md  index.md
examples/: algorithms_example.py  api_best_of_n.py  api_quickstart.py  api_usage_example.py  aws_bedrock_test.py  calendar_scheduling_bedrock.py  intent_test.py  paper_replication.py  plan_visualization_example.py  plangen_bedrock_test.py  public_api_example.py  simple_example.py  simple_intent_test.py  simple_openai_test.py  test_best_of_n.py  test_rebase.py  test_tree_of_thought.py  test_verification.py  verifiers_example.py
plangen/: __init__.py  agents.py  api.py  json_to_csv.py  plangen.py  (+18 more)
(+137 files in other folders)
