[tool.poetry]
name = "plangen"
version = "0.1.0"
description = "A multi-agent framework for generating planning and reasoning trajectories with LLMs"
authors = ["Carlos Cajias <cajias@example.com>"]
maintainers = ["PlanGEN Team <plangen@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cajias/plangen"
documentation = "https://github.com/cajias/plangen/tree/main/docs"
homepage = "https://github.com/cajias/plangen"
keywords = ["llm", "planning", "agents", "multi-agent", "generative-ai"]

# PyPI-specific fields
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cajias/plangen/issues"
"Changelog" = "https://github.com/cajias/plangen/releases"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "plangen"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^1.12.0"
pydantic = "^2.6.1"
tenacity = "^8.2.3"
numpy = "^1.20.0"
langgraph = "^0.1.11"
boto3 = "^1.34.0"
jinja2 = "^3.1.2"
networkx = "^3.1"
matplotlib = "^3.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.1"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "W"]
ignore = []